; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/btrfs/extr_volumes.c_btrfs_map_block.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/btrfs/extr_volumes.c_btrfs_map_block.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.btrfs_mapping_tree = type { i32 }
%struct.btrfs_bio = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @btrfs_map_block(%struct.btrfs_mapping_tree* %0, i32 %1, i32 %2, i32* %3, %struct.btrfs_bio** %4, i32 %5) #0 {
  %7 = alloca %struct.btrfs_mapping_tree*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca %struct.btrfs_bio**, align 8
  %12 = alloca i32, align 4
  store %struct.btrfs_mapping_tree* %0, %struct.btrfs_mapping_tree** %7, align 8
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i32* %3, i32** %10, align 8
  store %struct.btrfs_bio** %4, %struct.btrfs_bio*** %11, align 8
  store i32 %5, i32* %12, align 4
  %13 = load %struct.btrfs_mapping_tree*, %struct.btrfs_mapping_tree** %7, align 8
  %14 = load i32, i32* %8, align 4
  %15 = load i32, i32* %9, align 4
  %16 = load i32*, i32** %10, align 8
  %17 = load %struct.btrfs_bio**, %struct.btrfs_bio*** %11, align 8
  %18 = load i32, i32* %12, align 4
  %19 = call i32 @__btrfs_map_block(%struct.btrfs_mapping_tree* %13, i32 %14, i32 %15, i32* %16, %struct.btrfs_bio** %17, i32 %18)
  ret i32 %19
}

declare dso_local i32 @__btrfs_map_block(%struct.btrfs_mapping_tree*, i32, i32, i32*, %struct.btrfs_bio**, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
